src/test/deca/syntax/valid/testTypes.deca
// Description:
//   test types (String)
//
// Resultats:
//    valid for syntax , invalid for context
//
{
 String s = "unsupported";
}
