src/test/deca/syntax/invalid/testString.deca
// test Bad String statement
// Result : Error
{
    String s = 'Not valid';
}
